Fix for Issue 17: Summary of cookie value is truncated in "value" column (+ Chromebug related condition)
git-svn-id: http://firecookie.googlecode.com/svn/trunk@54 c6f3a21d-8651-0410-bb1f-c71b198f148d

--- a/chrome/skin/classic/firecookie.css
+++ b/chrome/skin/classic/firecookie.css
@@ -185,6 +185,7 @@
 .cookieExpiresLabel,
 .cookieValueLabel {
     padding: 1px 0 2px 0 !important;
+    width: 100%;
 }
 
 .cookieDomainLabel {
